Couple of security fixes. Update jdk versions
