# lib/server/server.js
@@ -48,7 +48,6 @@ const ALLOWED_PARAMS = [
   "deep",
   "profile",
   "exclude",
-  "includeFormulation",
   "includeCrypto",
   "standard",
   "minConfidence",
@@ -267,6 +266,10 @@ function gitClone(repoUrl, branch = null) {
   const gitArgs = [
     "-c",
     "alias.clone=",
+    "-c",
+    "core.fsmonitor=false",
+    "-c",
+    "safe.bareRepository=explicit",
     "clone",
     repoUrl,
     "--depth",
@@ -288,16 +291,26 @@ function gitClone(repoUrl, branch = null) {
     `Cloning Repo${branch ? ` with branch ${branch}` : ""} to ${tempDir}`,
   );
   const gitAllowProtocol = getGitAllowProtocol();
-  // See issue #1956
+  const envConfigs = {
+    GIT_CONFIG_COUNT: "2",
+    GIT_CONFIG_KEY_0: "core.fsmonitor",
+    GIT_CONFIG_VALUE_0: "false",
+    GIT_CONFIG_KEY_1: "safe.bareRepository",
+    GIT_CONFIG_VALUE_1: "explicit",
+  };
   const env = isSecureMode
     ? {
         ...process.env,
+        ...envConfigs,
         GIT_CONFIG_NOSYSTEM: "1",
         GIT_CONFIG_NOGLOBAL: "1",
         GIT_ALLOW_PROTOCOL: gitAllowProtocol,
       }
-    : { ...process.env, GIT_ALLOW_PROTOCOL: gitAllowProtocol };
-
+    : {
+        ...process.env,
+        ...envConfigs,
+        GIT_ALLOW_PROTOCOL: gitAllowProtocol,
+      };
   const result = safeSpawnSync("git", gitArgs, {
     shell: false,
     env,
